--- a/Red Dot prj/Packages/manifest.json
+++ b/Red Dot prj/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.microsoft.altspacevr_uploader": "file:D:/LOS/UNITY projects/AltSpaceWorld/altspacevr_uploader/package",
     "com.unity.collab-proxy": "1.13.5",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
